--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <variable
-            name="submitOnClickListener"
+            name="phoneSubmitClickListener"
+            type="android.view.View.OnClickListener" />
+        <variable
+            name="otpSubmitClickListener"
+            type="android.view.View.OnClickListener" />
+        <variable
+            name="resendClicklistener"
             type="android.view.View.OnClickListener" />
     </data>
 
@@ -16,78 +22,313 @@
         android:background="@color/colorWhite"
         tools:context=".ui.login.login.LoginFragment">
 
-        <EditText
-            android:id="@+id/editTextUsername"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/phoneNumberScreen"
             android:layout_width="0dp"
-            android:layout_height="@dimen/size_50"
-            android:layout_marginStart="@dimen/size_24"
-            android:layout_marginEnd="@dimen/size_24"
-            android:background="@drawable/bg_login_edittext"
-            android:drawableStart="@drawable/ic_username"
-            android:drawablePadding="@dimen/size_16"
-            android:elevation="@dimen/size_04"
-            android:ems="10"
-            android:fontFamily="@font/montserrat_light"
-            android:hint="Phone number"
-            android:inputType="text"
-            android:maxLength="35"
-            android:maxLines="1"
-            android:padding="@dimen/size_12"
-            android:textColor="@color/colorTextDark"
-            android:imeOptions="actionDone"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="0dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/otpScreen"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent=".25" />
+            <EditText
+                android:id="@+id/editTextUsername"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/size_50"
+                android:layout_marginStart="@dimen/size_24"
+                android:layout_marginEnd="@dimen/size_24"
+                android:background="@drawable/bg_login_edittext"
+                android:drawableStart="@drawable/ic_username"
+                android:drawablePadding="@dimen/size_16"
+                android:elevation="@dimen/size_04"
+                android:ems="10"
+                android:fontFamily="@font/montserrat_light"
+                android:hint="Phone number"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:maxLength="35"
+                android:maxLines="1"
+                android:padding="@dimen/size_12"
+                android:textColor="@color/colorTextDark"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/PhoneGuideline" />
 
-        <ImageButton
-            android:id="@+id/submit"
-            style="?android:selectableItemBackground"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_50"
-            android:layout_marginEnd="@dimen/size_50"
-            android:padding="@dimen/size_16"
-            android:background="@drawable/bg_submit"
-            android:clickable="false"
-            android:elevation="@dimen/size_08"
-            android:focusable="false"
-            android:onClick="@{submitOnClickListener}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
-            app:srcCompat="@drawable/ic_next" />
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/PhoneGuideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent=".25" />
 
-        <TextView
-            android:id="@+id/title"
+            <ImageButton
+                android:id="@+id/PhoneSubmit"
+                style="?android:selectableItemBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_50"
+                android:layout_marginEnd="@dimen/size_50"
+                android:background="@drawable/bg_submit"
+                android:clickable="false"
+                android:elevation="@dimen/size_08"
+                android:focusable="false"
+                android:onClick="@{phoneSubmitClickListener}"
+                android:padding="@dimen/size_16"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editTextUsername"
+                app:srcCompat="@drawable/ic_next" />
+
+            <TextView
+                android:id="@+id/PhoneTitle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_24"
+                android:layout_marginEnd="@dimen/size_24"
+                android:layout_marginBottom="@dimen/size_24"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="Enter your phone number"
+                android:textColor="@color/colorTextDark"
+                app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_08"
+                android:fontFamily="@font/montserrat_semibold"
+                android:textColor="@color/colorRed"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
+                app:layout_constraintStart_toStartOf="@+id/editTextUsername"
+                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/otpScreen"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/size_24"
-            android:layout_marginEnd="@dimen/size_24"
-            android:layout_marginBottom="@dimen/size_24"
-            android:fontFamily="@font/montserrat_regular"
-            android:text="Enter your phone number"
-            android:textColor="@color/colorTextDark"
-            app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toEndOf="@+id/phoneNumberScreen"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/error"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/size_08"
-            android:fontFamily="@font/montserrat_semibold"
-            android:textColor="@color/colorRed"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
-            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
-            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
+            <LinearLayout
+                android:id="@+id/otpSet"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_24"
+                android:layout_marginEnd="@dimen/size_24"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline">
 
+                <EditText
+                    android:id="@+id/otp1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/size_50"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/size_08"
+                    android:layout_marginEnd="@dimen/size_08"
+                    android:layout_weight=".25"
+                    android:autofillHints="*"
+                    android:background="@drawable/bg_otp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textColor="@color/colorTextDark"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/size_32" />
+
+                <EditText
+                    android:id="@+id/otp2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/size_50"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/size_08"
+                    android:layout_marginEnd="@dimen/size_08"
+                    android:layout_weight=".25"
+                    android:autofillHints="*"
+                    android:background="@drawable/bg_otp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textColor="@color/colorTextDark"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/size_32" />
+
+                <EditText
+                    android:id="@+id/otp3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/size_50"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/size_08"
+                    android:layout_marginEnd="@dimen/size_08"
+                    android:layout_weight=".25"
+                    android:autofillHints="*"
+                    android:background="@drawable/bg_otp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textColor="@color/colorTextDark"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/size_32" />
+
+                <EditText
+                    android:id="@+id/otp4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/size_50"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/size_08"
+                    android:layout_marginEnd="@dimen/size_08"
+                    android:layout_weight=".25"
+                    android:autofillHints="*"
+                    android:background="@drawable/bg_otp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textColor="@color/colorTextDark"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/size_32" />
+
+                <EditText
+                    android:id="@+id/otp5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/size_50"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/size_08"
+                    android:layout_marginEnd="@dimen/size_08"
+                    android:layout_weight=".25"
+                    android:autofillHints="*"
+                    android:background="@drawable/bg_otp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textColor="@color/colorTextDark"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/size_32" />
+
+                <EditText
+                    android:id="@+id/otp6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/size_50"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/size_08"
+                    android:layout_marginEnd="@dimen/size_08"
+                    android:layout_weight=".25"
+                    android:autofillHints="*"
+                    android:background="@drawable/bg_otp"
+                    android:fontFamily="@font/montserrat_medium"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:imeOptions="actionDone"
+                    android:inputType="number"
+                    android:maxLength="1"
+                    android:textColor="@color/colorTextDark"
+                    android:textCursorDrawable="@null"
+                    android:textSize="@dimen/size_32" />
+            </LinearLayout>
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent=".25" />
+
+            <ImageButton
+                android:id="@+id/submit"
+                style="?android:selectableItemBackground"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_50"
+                android:layout_marginEnd="@dimen/size_50"
+                android:background="@drawable/bg_submit"
+                android:clickable="true"
+                android:elevation="@dimen/size_08"
+                android:focusable="true"
+                android:onClick="@{otpSubmitClickListener}"
+                android:padding="@dimen/size_16"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/otpSet"
+                app:srcCompat="@drawable/ic_next" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_24"
+                android:layout_marginEnd="@dimen/size_24"
+                android:layout_marginBottom="@dimen/size_24"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="Enter the OTP sent to you"
+                android:textColor="@color/colorTextDark"
+                app:layout_constraintBottom_toTopOf="@+id/otpSet"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/resendCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_16"
+                android:background="?attr/selectableItemBackground"
+                android:fontFamily="@font/montserrat_medium"
+                android:onClick="@{resendClicklistener}"
+                android:padding="@dimen/size_08"
+                android:text="Resend OTP"
+                android:textColor="@color/colorTextDark"
+                app:layout_constraintBottom_toTopOf="@+id/countDown"
+                app:layout_constraintStart_toStartOf="@+id/otpSet"
+                app:layout_constraintTop_toBottomOf="@+id/otpSet" />
+
+            <TextView
+                android:id="@+id/countDown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
+                android:paddingEnd="@dimen/size_08"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/size_18"
+                app:layout_constraintEnd_toEndOf="@+id/resendCode"
+                app:layout_constraintTop_toBottomOf="@+id/resendCode" />
+
+            <ProgressBar
+                android:id="@+id/otpProgress"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:background="@color/translucent"
+                android:contextClickable="true"
+                android:elevation="@dimen/size_16"
+                android:indeterminate="true"
+                android:indeterminateBehavior="repeat"
+                android:indeterminateOnly="true"
+                android:indeterminateTint="@color/colorAccent"
+                android:padding="@dimen/size_180"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
