--- a/app/src/main/res/menu/dashboard_menu.xml
+++ b/app/src/main/res/menu/dashboard_menu.xml
@@ -2,18 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_first_screen"
-        android:icon="@android:drawable/ic_menu_help"
-        android:title="@string/title_first"/>
+        android:icon="@drawable/ic_home"
+        android:title="@string/title_home"/>
     <item
         android:id="@+id/navigation_second_screen"
-        android:icon="@android:drawable/ic_menu_help"
-        android:title="@string/title_second"/>
+        android:icon="@drawable/ic_ad"
+        android:title="@string/title_ad"/>
     <item
         android:id="@+id/navigation_third_screen"
-        android:icon="@android:drawable/ic_menu_help"
-        android:title="@string/title_third"/>
-    <item
-        android:id="@+id/navigation_fourth_screen"
-        android:icon="@android:drawable/ic_menu_help"
-        android:title="@string/title_four"/>
+        android:icon="@drawable/ic_settings"
+        android:title="@string/title_settings"/>
 </menu>
