--- a/app/src/main/res/navigation/login_nav_graph.xml
+++ b/app/src/main/res/navigation/login_nav_graph.xml
@@ -3,24 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/login_navigation"
-    app:startDestination="@id/navigation_login">
+    app:startDestination="@id/navigation_language">
+    <fragment
+        android:id="@+id/navigation_language"
+        android:name="com.base.app.ui.login.language.LanguageFragment"
+        android:label="@string/title_language"
+        tools:layout="@layout/fragment_language">
+        <action
+            android:id="@+id/actionLogin"
+            app:destination="@id/navigation_login" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_login"
         android:name="com.base.app.ui.login.login.LoginFragment"
         android:label="@string/title_login"
-        tools:layout="@layout/fragment_login">
-        <action
-            android:id="@+id/actionVerifyOtp"
-            app:destination="@id/navigation_otp" />
-    </fragment>
-    <fragment
-        android:id="@+id/navigation_otp"
-        android:name="com.base.app.ui.login.otp.OtpFragment"
-        android:label="@string/title_otp"
-        tools:layout="@layout/fragment_otp">
-        <argument
-            android:name="userDetails"
-            app:argType="com.base.app.model.entity.UserDetails"
-            app:nullable="false" />
-    </fragment>
+        tools:layout="@layout/fragment_login"/>
 </navigation>
