--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:windowFullscreen">true</item>
+        <item name="actionBarTheme">@style/LoginActionBarTheme</item>
     </style>
     <style name="MySplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowFullscreen">true</item>
@@ -19,9 +20,16 @@
         <item name="colorControlNormal">@color/colorBlack</item>
         <item name="actionBarStyle">@style/DarkActionBarStyle</item>
     </style>
+    <style name="LoginActionBarTheme" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="actionBarStyle">@style/LoginActionBarStyle</item>
+    </style>
     <style name="DarkActionBarStyle" parent="Widget.AppCompat.Light.ActionBar">
         <item name="background">@color/colorBlackGradientDark</item>
         <item name="titleTextAppearance">@style/ActionBarTextAppearance</item>
+        <item name="elevation">@null</item>
+    </style>
+    <style name="LoginActionBarStyle" parent="Widget.AppCompat.Light.ActionBar">
+        <item name="background">@color/colorPrimary</item>
         <item name="elevation">@null</item>
     </style>
     <style name="ActionBarTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
