Added UI for Stores & Store list

--- a/app/src/main/res/layout/layout_no_internet.xml
+++ b/app/src/main/res/layout/layout_no_internet.xml
@@ -52,7 +52,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_bold"
+            android:fontFamily="@font/bold"
             android:text="Oops!"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="@dimen/text_size_24"
@@ -84,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/size_32"
-        android:fontFamily="@font/montserrat_bold"
+        android:fontFamily="@font/bold"
         android:paddingStart="@dimen/size_24"
         android:paddingEnd="@dimen/size_24"
         android:text="Try again"
