--- a/app/src/main/res/layout/fragment_action.xml
+++ b/app/src/main/res/layout/fragment_action.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.dashboard.first.details.action.ActionFragment">
+    tools:context=".ui.dashboard.stores.storeList.action.ActionFragment">
 
 </FrameLayout>
