--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -46,7 +46,7 @@
                 android:drawablePadding="@dimen/size_16"
                 android:elevation="@dimen/size_04"
                 android:ems="10"
-                android:fontFamily="@font/montserrat_light"
+                android:fontFamily="@font/light"
                 android:hint="Phone number"
                 android:imeOptions="actionDone"
                 android:inputType="text"
@@ -91,7 +91,6 @@
                 android:layout_marginStart="@dimen/size_24"
                 android:layout_marginEnd="@dimen/size_24"
                 android:layout_marginBottom="@dimen/size_24"
-                android:fontFamily="@font/montserrat_regular"
                 android:text="Enter your phone number"
                 android:textColor="@color/colorTextDark"
                 app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
@@ -103,7 +102,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/size_08"
-                android:fontFamily="@font/montserrat_semibold"
+                android:fontFamily="@font/bold"
                 android:textColor="@color/colorRed"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
@@ -143,7 +142,7 @@
                     android:layout_weight=".25"
                     android:autofillHints="*"
                     android:background="@drawable/bg_otp"
-                    android:fontFamily="@font/montserrat_medium"
+                    android:fontFamily="@font/medium"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:inputType="number"
@@ -162,7 +161,7 @@
                     android:layout_weight=".25"
                     android:autofillHints="*"
                     android:background="@drawable/bg_otp"
-                    android:fontFamily="@font/montserrat_medium"
+                    android:fontFamily="@font/medium"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:inputType="number"
@@ -181,7 +180,7 @@
                     android:layout_weight=".25"
                     android:autofillHints="*"
                     android:background="@drawable/bg_otp"
-                    android:fontFamily="@font/montserrat_medium"
+                    android:fontFamily="@font/medium"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:inputType="number"
@@ -200,7 +199,7 @@
                     android:layout_weight=".25"
                     android:autofillHints="*"
                     android:background="@drawable/bg_otp"
-                    android:fontFamily="@font/montserrat_medium"
+                    android:fontFamily="@font/medium"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:imeOptions="actionDone"
@@ -220,7 +219,7 @@
                     android:layout_weight=".25"
                     android:autofillHints="*"
                     android:background="@drawable/bg_otp"
-                    android:fontFamily="@font/montserrat_medium"
+                    android:fontFamily="@font/medium"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:imeOptions="actionDone"
@@ -240,7 +239,7 @@
                     android:layout_weight=".25"
                     android:autofillHints="*"
                     android:background="@drawable/bg_otp"
-                    android:fontFamily="@font/montserrat_medium"
+                    android:fontFamily="@font/medium"
                     android:foregroundGravity="center"
                     android:gravity="center"
                     android:imeOptions="actionDone"
@@ -284,7 +283,6 @@
                 android:layout_marginStart="@dimen/size_24"
                 android:layout_marginEnd="@dimen/size_24"
                 android:layout_marginBottom="@dimen/size_24"
-                android:fontFamily="@font/montserrat_regular"
                 android:text="Enter the OTP sent to you"
                 android:textColor="@color/colorTextDark"
                 app:layout_constraintBottom_toTopOf="@+id/otpSet"
@@ -297,7 +295,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/size_16"
                 android:background="?attr/selectableItemBackground"
-                android:fontFamily="@font/montserrat_medium"
+                android:fontFamily="@font/medium"
                 android:onClick="@{resendClicklistener}"
                 android:padding="@dimen/size_08"
                 android:text="Resend OTP"
@@ -310,7 +308,6 @@
                 android:id="@+id/countDown"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_regular"
                 android:paddingEnd="@dimen/size_08"
                 android:textColor="@color/colorAccent"
                 android:textSize="@dimen/size_18"
