--- a/app/src/main/res/drawable/radio_pressed_lang.xml
+++ b/app/src/main/res/drawable/radio_pressed_lang.xml
@@ -17,10 +17,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle">
             <corners android:radius="16dp" />
-            <solid android:color="#D7385E" />
-            <stroke
-                android:width="4dp"
-                android:color="#ECF3F3" />
+            <solid android:color="#ECF3F3" />
         </shape>
     </item>
 </layer-list>
