--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,32 +22,52 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:background="@color/colorBlueBackground"
+        android:background="@color/colorWhite"
         tools:context=".ui.login.login.LoginFragment">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_fortmart" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_login_bg" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/phoneNumberScreen"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintEnd_toStartOf="@+id/otpScreen"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextUsername"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/size_50"
-                android:layout_marginStart="@dimen/size_24"
-                android:layout_marginEnd="@dimen/size_24"
+                android:layout_marginStart="@dimen/size_50"
+                android:layout_marginEnd="@dimen/size_50"
                 android:background="@drawable/bg_login_edittext"
                 android:drawableStart="@drawable/ic_phone"
                 android:drawablePadding="@dimen/size_16"
                 android:elevation="@dimen/size_04"
                 android:ems="10"
                 android:fontFamily="@font/light"
-                android:hint="Phone number"
+                android:hint="**** *** ***"
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:maxLength="35"
@@ -56,7 +76,8 @@
                 android:textColor="@color/colorTextDark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/PhoneGuideline" />
+                app:layout_constraintTop_toTopOf="@+id/PhoneGuideline"
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/PhoneGuideline"
@@ -66,48 +87,67 @@
                 app:layout_constraintGuide_percent=".25" />
 
             <Button
-                android:id="@+id/PhoneSubmit"
+                android:id="@+id/ButtonNext"
                 style="?android:selectableItemBackground"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_50"
-                android:layout_marginEnd="@dimen/size_50"
-                android:background="@drawable/bg_submit"
+                android:layout_marginTop="@dimen/size_24"
+                android:background="@drawable/bg_login_submit"
                 android:clickable="false"
-                android:elevation="@dimen/size_08"
                 android:focusable="false"
                 android:onClick="@{phoneSubmitClickListener}"
-                android:text="Go"
+                android:paddingStart="@dimen/size_16"
+                android:text="Next"
                 android:textAllCaps="false"
                 android:textColor="@color/colorTextWhite"
                 android:textSize="@dimen/text_size_20"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
+                app:layout_constraintStart_toStartOf="@+id/editTextUsername"
                 app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
 
             <TextView
                 android:id="@+id/PhoneTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_24"
-                android:layout_marginEnd="@dimen/size_24"
                 android:layout_marginBottom="@dimen/size_24"
-                android:text="Enter your phone number"
+                android:text="Mobile number"
                 android:textColor="@color/colorTextDark"
                 app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="@+id/editTextUsername" />
 
             <TextView
-                android:id="@+id/error"
-                android:layout_width="wrap_content"
+                android:id="@+id/termsAndPolicyRadio"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_08"
-                android:fontFamily="@font/bold"
-                android:textColor="@color/colorRed"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
-                app:layout_constraintStart_toStartOf="@+id/editTextUsername"
-                app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginBottom="16dp"
+                android:checked="true"
+                android:padding="@dimen/size_08"
+                android:textColor="@color/colorTextBlack"
+                android:textColorHighlight="#80D7385E"
+                android:textColorLink="#D7385E"
+                android:textSize="@dimen/text_size_18"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/checkBox"
+                app:layout_constraintTop_toBottomOf="@+id/ButtonNext"
+                app:layout_constraintVertical_bias="0.25" />
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginStart="32dp"
+                android:button="@drawable/selector_language_radio"
+                android:checked="true"
+                android:drawablePadding="@dimen/size_08"
+                android:padding="@dimen/size_08"
+                app:layout_constraintBottom_toBottomOf="@+id/termsAndPolicyRadio"
+                app:layout_constraintEnd_toStartOf="@+id/termsAndPolicyRadio"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/termsAndPolicyRadio" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -116,7 +156,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/phoneNumberScreen"
             app:layout_constraintTop_toTopOf="parent">
@@ -125,8 +165,8 @@
                 android:id="@+id/otpSet"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_24"
-                android:layout_marginEnd="@dimen/size_24"
+                android:layout_marginStart="@dimen/size_50"
+                android:layout_marginEnd="@dimen/size_50"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -258,36 +298,33 @@
                 app:layout_constraintGuide_percent=".25" />
 
             <Button
-                android:id="@+id/submit"
+                android:id="@+id/ButtonSubmit"
                 style="?android:selectableItemBackground"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/size_50"
-                android:layout_marginEnd="@dimen/size_50"
-                android:background="@drawable/bg_submit"
+                android:layout_marginTop="@dimen/size_24"
+                android:background="@drawable/bg_login_submit"
                 android:clickable="false"
-                android:elevation="@dimen/size_08"
                 android:focusable="false"
                 android:onClick="@{otpSubmitClickListener}"
-                android:text="Go"
+                android:paddingStart="@dimen/size_16"
+                android:text="Submit"
                 android:textAllCaps="false"
                 android:textColor="@color/colorTextWhite"
                 android:textSize="@dimen/text_size_20"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/otpSet"
+                app:layout_constraintStart_toStartOf="@+id/otpSet"
                 app:layout_constraintTop_toBottomOf="@+id/otpSet" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/size_24"
-                android:layout_marginEnd="@dimen/size_24"
                 android:layout_marginBottom="@dimen/size_24"
                 android:text="Enter the OTP sent to you"
                 android:textColor="@color/colorTextDark"
                 app:layout_constraintBottom_toTopOf="@+id/otpSet"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="@+id/otpSet" />
 
             <TextView
                 android:id="@+id/resendCode"
@@ -321,9 +358,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:background="@color/translucent"
+            android:background="@color/translucentProgressbar"
             android:contextClickable="true"
-            android:elevation="@dimen/size_16"
             android:indeterminate="true"
             android:indeterminateBehavior="repeat"
             android:indeterminateOnly="true"
