--- a/app/src/main/res/navigation/dashboard_nav_graph.xml
+++ b/app/src/main/res/navigation/dashboard_nav_graph.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dashboard_navigation"
-    app:startDestination="@id/navigation_stores">
+    app:startDestination="@id/navigation_category_list">
 
     <fragment
         android:id="@+id/navigation_stores"
         android:name="com.fortmart.customer.ui.dashboard.stores.StoresFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_items"
         tools:layout="@layout/fragment_stores">
         <action
             android:id="@+id/actionToStoreList"
@@ -20,7 +20,7 @@
     <fragment
         android:id="@+id/navigation_second_screen"
         android:name="com.fortmart.customer.ui.dashboard.second.SecondFragment"
-        android:label="@string/title_ad"
+        android:label="@string/title_orders"
         tools:layout="@layout/fragment_second" />
 
     <fragment
