--- a/app/src/main/res/layout/fragment_category_list.xml
+++ b/app/src/main/res/layout/fragment_category_list.xml
@@ -7,12 +7,31 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
     tools:context=".ui.dashboard.stores.storeList.categoryList.CategoryListFragment">
+
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/size_16"
+        android:layout_marginTop="@dimen/size_16"
+        android:layout_marginEnd="@dimen/size_16"
+        android:background="@drawable/bg_product_search"
+        android:elevation="@dimen/size_04"
+        app:defaultQueryHint="Search products"
+        app:iconifiedByDefault="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:searchIcon="@drawable/ic_search" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/dashboardMenuRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/size_08"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/searchView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
