--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -68,6 +68,8 @@
                     android:id="@+id/opt1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:button="@drawable/selector_language_radio"
+                    android:padding="@dimen/size_08"
                     android:textSize="@dimen/size_18"
                     android:scaleX="0.75"
                     android:scaleY="0.75"
@@ -78,6 +80,8 @@
                     android:id="@+id/opt2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:button="@drawable/selector_language_radio"
+                    android:padding="@dimen/size_08"
                     android:textSize="@dimen/size_18"
                     android:scaleX="0.75"
                     android:scaleY="0.75"
@@ -87,6 +91,8 @@
                     android:id="@+id/opt3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:button="@drawable/selector_language_radio"
+                    android:padding="@dimen/size_08"
                     android:textSize="@dimen/size_18"
                     android:scaleX="0.75"
                     android:scaleY="0.75"
