--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <color name="colorPrimary">#ECF3F3</color>
     <color name="colorPrimaryDark">#2CB9F5</color>
-    <color name="colorAccent">#E8505B</color>
+    <color name="colorAccent">#D7385E</color>
 
     <color name="colorRipple">#80E8505B</color>
 
