--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -26,10 +27,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/size_16"
                 android:layout_marginTop="@dimen/size_16"
+                android:layout_marginEnd="16dp"
                 android:fontFamily="@font/medium"
-                android:textColor="@color/colorTextBlack"
-                android:textSize="@dimen/text_size_18"
                 android:text="@{productDetails.title}"
+                android:textColor="@color/colorTextBlack"
+                android:textSize="@dimen/text_size_24"
+                app:layout_constraintEnd_toStartOf="@+id/price"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,73 +40,74 @@
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:fontFamily="@font/bold"
-                android:text="@{productDetails.price}"
+                android:text='@{@string/currency+productDetails.price.toString()}'
                 android:textColor="#28AC62"
                 android:textSize="@dimen/size_18"
-                app:layout_constraintEnd_toStartOf="@+id/image"
-                app:layout_constraintStart_toEndOf="@+id/title"
+                app:layout_constraintEnd_toEndOf="@+id/image"
+                app:layout_constraintStart_toStartOf="@+id/image"
                 app:layout_constraintTop_toTopOf="@+id/title" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@{productDetails.originalPrice}"
+                android:layout_marginTop="@dimen/size_04"
+                android:text='@{@string/currency+productDetails.originalPrice.toString()}'
+                android:textSize="@dimen/text_size_16"
                 app:layout_constraintStart_toStartOf="@+id/price"
                 app:layout_constraintTop_toBottomOf="@+id/price" />
 
             <RadioGroup
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/size_08"
                 android:layout_marginTop="@dimen/size_16"
                 android:layout_marginBottom="@dimen/size_16"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/title"
-                app:layout_constraintTop_toBottomOf="@+id/title">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView5">
 
                 <RadioButton
                     android:id="@+id/opt1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:button="@drawable/selector_language_radio"
-                    android:padding="@dimen/size_08"
-                    android:textSize="@dimen/size_18"
+                    android:checked="true"
+                    android:padding="@dimen/size_04"
                     android:scaleX="0.75"
                     android:scaleY="0.75"
-                    android:checked="true"
-                    android:text="100g" />
+                    android:text="100g"
+                    android:textSize="@dimen/size_18" />
 
                 <RadioButton
                     android:id="@+id/opt2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:button="@drawable/selector_language_radio"
-                    android:padding="@dimen/size_08"
-                    android:textSize="@dimen/size_18"
+                    android:padding="@dimen/size_04"
                     android:scaleX="0.75"
                     android:scaleY="0.75"
-                    android:text="250g" />
+                    android:text="250g"
+                    android:textSize="@dimen/size_18" />
 
                 <RadioButton
                     android:id="@+id/opt3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:button="@drawable/selector_language_radio"
-                    android:padding="@dimen/size_08"
-                    android:textSize="@dimen/size_18"
+                    android:padding="@dimen/size_04"
                     android:scaleX="0.75"
                     android:scaleY="0.75"
-                    android:text="500g" />
+                    android:text="500g"
+                    android:textSize="@dimen/size_18" />
             </RadioGroup>
 
             <ImageView
                 android:id="@+id/image"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginTop="@dimen/size_08"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="@dimen/size_08"
                 android:background="@drawable/bg_item_image"
                 android:elevation="@dimen/size_04"
@@ -111,7 +115,7 @@
                 app:layout_constraintBottom_toTopOf="@+id/add"
                 app:layout_constraintEnd_toEndOf="@+id/add"
                 app:layout_constraintStart_toStartOf="@+id/add"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
                 app:srcCompat="@drawable/ic_apple" />
 
             <Button
@@ -127,6 +131,15 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/image" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/size_04"
+                android:text="Pack of 1"
+                app:layout_constraintStart_toStartOf="@+id/title"
+                app:layout_constraintTop_toBottomOf="@+id/title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
