--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    tools:context=".ui.dashboard.stores.storeList.categoryList.productList.ProductListFragment">
+    tools:context=".ui.dashboard.items.productList.ProductListFragment">
 
     <LinearLayout
         android:id="@+id/label"
