--- a/app/src/main/res/menu/dashboard_menu.xml
+++ b/app/src/main/res/menu/dashboard_menu.xml
@@ -5,7 +5,7 @@
         android:icon="@drawable/ic_menu_items"
         android:title="@string/title_items"/>
     <item
-        android:id="@+id/navigation_second_screen"
+        android:id="@+id/navigation_orders"
         android:icon="@drawable/ic_menu_orders"
         android:title="@string/title_orders"/>
     <item
