--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,4 +60,12 @@
         <item name="android:button">@null</item>
     </style>
 
+    <style name="TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/colorDisabled</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="fontFamily">@font/bold</item>
+        <item name="android:textSize">@dimen/text_size_20</item>
+    </style>
+
 </resources>
